--- a/src/endpoint/Bc.Host.AspNet.Endpoint/Bc.Host.AspNet.Endpoint.csproj
+++ b/src/endpoint/Bc.Host.AspNet.Endpoint/Bc.Host.AspNet.Endpoint.csproj
@@ -4,6 +4,14 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <OutputPath>..\..\bin\host-endpoint</OutputPath>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <OutputPath>..\..\bin\host-endpoint</OutputPath>
+    </PropertyGroup>
+
     <ItemGroup>
       <PackageReference Include="AsyncFixer" Version="1.3.0" />
       <PackageReference Include="MinVer" Version="2.3.0" />
