--- a/src/web/Bc.Web/Bc.Web.csproj
+++ b/src/web/Bc.Web/Bc.Web.csproj
@@ -4,6 +4,14 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <OutputPath>..\..\bin\web</OutputPath>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <OutputPath>..\..\bin\web</OutputPath>
+    </PropertyGroup>
+
     <ItemGroup>
       <ProjectReference Include="..\..\common\Bc.Common.Endpoint\Bc.Common.Endpoint.csproj" />
       <ProjectReference Include="..\..\endpoint\Bc.Contracts.Internals.Endpoint\Bc.Contracts.Internals.Endpoint.fsproj" />
