--- a/src/endpoint/Bc.Host.AspNet.Endpoint/Bc.Host.AspNet.Endpoint.csproj
+++ b/src/endpoint/Bc.Host.AspNet.Endpoint/Bc.Host.AspNet.Endpoint.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <OutputPath>..\..\bin\host-endpoint</OutputPath>
+      <OutputPath>bin\Debug\</OutputPath>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
