--- a/src/web/Bc.Web/Bc.Web.csproj
+++ b/src/web/Bc.Web/Bc.Web.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <OutputPath>..\..\bin\web</OutputPath>
+      <OutputPath>bin\Debug\</OutputPath>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
