--- a/src/web/Bc.Web/Properties/launchSettings.json
+++ b/src/web/Bc.Web/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:30256",
-      "sslPort": 44323
+      "applicationUrl": "http://localhost:17738",
+      "sslPort": 44351
     }
   },
   "profiles": {
@@ -19,6 +19,7 @@
     },
     "Bc.Web": {
       "commandName": "Project",
+      "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
