--- a/src/endpoint/Bc.Endpoint/Bc.Endpoint.fsproj
+++ b/src/endpoint/Bc.Endpoint/Bc.Endpoint.fsproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\common\Bc.Common.Endpoint\Bc.Common.Endpoint.csproj" />
+    <ProjectReference Include="..\..\common\Bc.Common.Endpoint\Bc.Common.Endpoint.fsproj" />
     <ProjectReference Include="..\Bc.Contracts.Externals.Endpoint\Bc.Contracts.Externals.Endpoint.fsproj" />
     <ProjectReference Include="..\Bc.Contracts.Internals.Endpoint\Bc.Contracts.Internals.Endpoint.fsproj" />
     <ProjectReference Include="..\..\common\Bc.Common.Logic\Bc.Common.Logic.fsproj" />
