--- a/src/web/Bc.Web/Bc.Web.fsproj
+++ b/src/web/Bc.Web/Bc.Web.fsproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\common\Bc.Common.Endpoint\Bc.Common.Endpoint.csproj" />
+    <ProjectReference Include="..\..\common\Bc.Common.Endpoint\Bc.Common.Endpoint.fsproj" />
     <ProjectReference Include="..\..\endpoint\Bc.Contracts.Internals.Endpoint\Bc.Contracts.Internals.Endpoint.fsproj" />
   </ItemGroup>
 
